--- a/index.html
+++ b/index.html
@@ -320,10 +320,15 @@
                                 </ul>
                             </p>
                         </div>
-                        <div style="margin-left: 50px;">
+                        <!-- <div style="margin-left: 50px;">
                             <button>
                                 <p class="old">499.000 vnd</p>
                                 <p class="new">439.000 vnd</p>
+                            </button>
+                        </div> -->
+                        <div style="margin-left: 50px; margin-top: 7px;">
+                            <button>
+                                <p class="new" style="margin-top: 15px;">Liên hệ</p>
                             </button>
                         </div>
                     </div>
@@ -343,10 +348,15 @@
                                 </ul>
                             </p>
                         </div>
-                        <div style="margin-left: 50px;">
+                        <!-- <div style="margin-left: 50px;">
                             <button>
                                 <p class="old">749.000 vnd</p>
                                 <p class="new">659.000 vnd</p>
+                            </button>
+                        </div> -->
+                        <div style="margin-left: 50px; margin-top: 7px;">
+                            <button>
+                                <p class="new" style="margin-top: 15px;">Liên hệ</p>
                             </button>
                         </div>
                     </div>
