--- a/index.html
+++ b/index.html
@@ -293,19 +293,47 @@
                                         Mô phỏng căn nhà của bạn gần với thực tế.
                                     </li>
                                     <li>
-                                        Hỗ trợ 5 năm.
+                                        (Tùy chọn)
                                     </li>
                                 </ul>
                             </p>
                         </div>
                         <div style="margin-left: 50px; margin-top: 7px;">
                             <button>
-                                <p class="new" style="margin-top: 15px;">Liên hệ</p>
+                                <p class="new" style="margin-top: 15px;">Xem thêm</p>
                             </button>
                         </div>
                     </div>
 
                     <div class="item">
+                        <div class="img"></div>
+                        <div class="info">
+                            <p><b>Mini Relay Wifi</b></p>
+                            <p>
+                                <ul>
+                                    <li>
+                                        Công tắc điều khiển thiết bị.
+                                    </li>
+                                    <li>
+                                        (Hướng dẫn lắp ráp)
+                                    </li>
+                                </ul>
+                            </p>
+                        </div>
+                        <!-- <div style="margin-left: 50px;">
+                            <button>
+                                <p class="old">499.000 vnd</p>
+                                <p class="new">439.000 vnd</p>
+                            </button>
+                        </div> -->
+                        <div style="margin-left: 50px; margin-top: 7px;">
+                            <button>
+                                <p class="new" style="margin-top: 15px;">Xem thêm</p>
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- <div class="item">
                         <div class="img"></div>
                         <div class="info">
                             <p><b>Relays Wifi 4</b></p>
@@ -326,14 +354,14 @@
                                 <p class="new">439.000 vnd</p>
                             </button>
                         </div> -->
-                        <div style="margin-left: 50px; margin-top: 7px;">
+                        <!-- <div style="margin-left: 50px; margin-top: 7px;">
                             <button>
                                 <p class="new" style="margin-top: 15px;">Liên hệ</p>
                             </button>
                         </div>
-                    </div>
+                    </div> --> -->
 
-                    <div class="item">
+                    <!-- <div class="item">
                         <div class="img"></div>
                         <div class="info">
                             <p><b>Relays Wifi 8</b></p>
@@ -354,12 +382,12 @@
                                 <p class="new">659.000 vnd</p>
                             </button>
                         </div> -->
-                        <div style="margin-left: 50px; margin-top: 7px;">
+                        <!-- <div style="margin-left: 50px; margin-top: 7px;">
                             <button>
                                 <p class="new" style="margin-top: 15px;">Liên hệ</p>
                             </button>
                         </div>
-                    </div>
+                    </div> --> -->
                     
                     <!-- <div class="item"></div> -->
 
